# ROSCon_UK_2025

./: LICENSE.md  README.md
rosconuk25_execution/: CMakeLists.txt  package.xml
rosconuk25_execution/programs/: CubePP_ur3.yaml  CubePP_ur3_sim.yaml  cubePP_ur3.yaml  cubePP_ur3_sim.yaml  ur3_demo.yaml
rosconuk25_execution/python/: cubePP.py
rosconuk25_gazebo/: CMakeLists.txt  package.xml
rosconuk25_moveit2/: CMakeLists.txt  package.xml
rosconuk25_ope/: CMakeLists.txt  package.xml
solutions/: A (solution) - Practical Exercises.md  A1 - Gazebo Simulation Launch.md  A2 - Gazebo Simulation + MoveIt!2 Launch.md  A3 - Robot Bringup + MoveIt!2 Launch.md  B (solution) - Practical Exercises.md  B1 - Set up a ROS 2 Environment for your Robot Cell.md  B2 - Add objects to the Simulation Environment.md  C (solution) - Practical Exercises (Part 1).md  C (solution) - Practical Exercises (Part 2).md  C1 - Operate a Robot Arm using ROS 2 Topics, Services and Actions.md  C2 - Create a Pick&Place Robot Program using the ExecuteProgram Tool.md  C3 - Create a Pick&Place Robot Program using Python.md  C4 - Perception-driven Pick&Place.md
tasks/: A - Practical Exercises.md  A1 - Gazebo Simulation Launch.md  A2 - Gazebo Simulation + MoveIt!2 Launch.md  A3 - Robot Bringup + MoveIt!2 Launch.md  B - Practical Exercises.md  B1 - Set up a ROS 2 Environment for your Robot Cell.md  B2 - Add objects to the Simulation Environment.md  C - Practical Exercises (Part 1).md  C - Practical Exercises (Part 2).md  C1 - Operate a Robot Arm using ROS 2 Topics, Services and Actions.md  (+1 more)
(+19 files in other folders)
